Change job priority on queue page
