# modules/restserver/src/main/scala/docspell/restserver/routes/JobQueueRoutes.scala
@@ -6,9 +6,11 @@ import cats.implicits._
 import docspell.backend.BackendApp
 import docspell.backend.auth.AuthToken
 import docspell.common.Ident
+import docspell.restapi.model.JobPriority
 import docspell.restserver.conv.Conversions
 
 import org.http4s.HttpRoutes
+import org.http4s.circe.CirceEntityDecoder._
 import org.http4s.circe.CirceEntityEncoder._
 import org.http4s.dsl.Http4sDsl
 
@@ -30,6 +32,13 @@ object JobQueueRoutes {
         for {
           result <- backend.job.cancelJob(id, user.account.collective)
           resp   <- Ok(Conversions.basicResult(result))
+        } yield resp
+
+      case req @ POST -> Root / Ident(id) / "priority" =>
+        for {
+          prio <- req.as[JobPriority]
+          res  <- backend.job.setPriority(id, user.account.collective, prio.priority)
+          resp <- Ok(Conversions.basicResult(res, "Job priority changed"))
         } yield resp
     }
   }
